netpols/default-allow.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.allow
  namespace: hipstershop
spec:
  tier: default
  ingress:
    - action: Allow
      source: {}
      destination: {}
  egress:
    - action: Allow
      source: {}
      destination: {}
  types:
    - Ingress
    - Egress
