netpols/no-tier.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.leonnotier
  namespace: hipstershop
spec:
  order: 650
  selector: app == "checkoutservice"
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == "frontend"
      destination:
        ports:
          - 5050
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: app == "currencyservice"
        ports:
          - 7000
  types:
    - Ingress
    - Egress
